fix link overflow

--- a/src/app/link-renderer/link-renderer.component.css
+++ b/src/app/link-renderer/link-renderer.component.css
@@ -18,6 +18,7 @@
     white-space: nowrap;
     display: block;
     width: calc(100% - 70px);
+    overflow: hidden;
     float: left;
     margin: 10px 0;
 }
